# give-me-movie

./: .gitignore  README.md  main.py  pyproject.toml  zappa_settings.json
src/: __init__.py  base.py  commands.py  enums.py  errors.py  git_repo.py  item.py  manager.py  recommender.py  request.py  response.py  settings.py  utils.py  views.py
src/utils/: echo.py  field.py  random_.py
tests/: conftest.py  test_item.py  test_manager.py  test_request.py  test_response.py
tests/mocks/: err_response.py  factories.py
tests/utils/: test_field.py  test_random_.py
