[tool.poetry]
name = "to_find_hormv"
version = "0.1.0"
description = ""
authors = ["jinsuPark"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-dotenv = "^0.19.1"
typer = "^0.4.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
